# VISG-SLAM

./: CMakeLists.txt  README.MD
doc/: 架构设计.docx  需求.docx
include/: camera.h  chessboard.h  common.h  draw_board.h  feature.h  frame.h  keyframe.h  loop.h  map_point.h  matcher.h  optimizer.h  orb_tracker.h  stereo.h  test.h  thread_pool.h  timer.h  tracker_interface.h  type.h  utils.hpp  visg_slam.h
src/: camera.cpp  chessboard.cpp  common.cpp  draw_board.cpp  feature.cpp  frame.cpp  keyframe.cpp  loop.cpp  main.cpp  map_point.cpp  matcher.cpp  optimizer.cpp  orb_tracker.cpp  stereo.cpp  timer.cpp  utils.cpp  visg_slam.cpp
test/: test.cpp
tools/: get_images.py  rt.py  rtError.py
